<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:minHeight="?android:actionBarSize" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_change_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_auto"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_change_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_zh"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_change_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_en"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_change_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_ar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_change_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_fr"
                android:textAllCaps="false" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/new_page_text"
        android:textAllCaps="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_content" />
    </ScrollView>

</LinearLayout>