<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_locale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:textAllCaps="false"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/hello_world"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tv_test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tv_test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top" />

    <TextView
        android:id="@+id/tv_test3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tv_test4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:textAllCaps="false" />
    <TextView
        android:id="@+id/tv_test5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_get_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textAllCaps="false" />

    <!--<WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:visibility="visible" />-->

    <Button
        android:id="@+id/btn_go_webview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_webview"
        android:textAllCaps="false" />

</LinearLayout>